<resources>
    <string name="app_name">papayaclone</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pay_bill">Pay Bill</string>
    <string name="menu_bill_history">Bill History</string>
    <string name="menu_payment_methods">Payment Methods</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_help">Help</string>
</resources>
