<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pay_bill"
            android:color="@color/textSecondary"
            android:title="@string/menu_pay_bill" />
        <item
            android:id="@+id/nav_bill_history"
            android:color="@color/textSecondary"
            android:title="@string/menu_bill_history" />
        <item
            android:id="@+id/nav_payment_methods"
            android:color="@color/textSecondary"
            android:title="@string/menu_payment_methods" />
        <item
            android:id="@+id/nav_notifications"
            android:color="@color/textSecondary"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_help"
            android:color="@color/textSecondary"
            android:title="@string/menu_help" />
    </group>

</menu>
